--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@solana/web3.js": "^1.95.0",
     "@tanstack/react-table": "^8.19.2",
     "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.0",
